Display item marker modal on top of cursor to prevent overflow

--- a/app/assets/stylesheets/ImageFrame.module.css
+++ b/app/assets/stylesheets/ImageFrame.module.css
@@ -39,8 +39,10 @@
 
 .modal {
   composes: container from './ItemSelector.module.css';
+  font-size: 0.9rem;
   font-weight: bold;
   padding: 1rem;
+  transition: none;
 }
 
 .message {
